--- a/pricing/index.html
+++ b/pricing/index.html
@@ -132,10 +132,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="nav-bar-actions">
     <nav class="nav-bar-action">
-      <a href="https://app.qzzr.com/new" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+      <a href="/pricing/" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
         <i class="icon icon-ss-compose"></i>
         <span class="inline-block">
-          <span class="button-label wxl-none">Create a quiz</span>
+          <span class="button-label wxl-none">Get started</span>
         </span>
       </a>
       <a class="button button-white button-outline" href="https://app.qzzr.com/account/signin">
