--- a/about/index.html
+++ b/about/index.html
@@ -790,7 +790,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="page-wrapper">
 
   <nav class="text-center purple-bg pt4 pb4">
-    <a href="https://app.qzzr.com/account/signup" class="button button-large h6 b button-outline button-white">
+    <a href="/pricing/" class="button button-large h6 b button-outline button-white">
       <span class="button-label pt3" style="display: block;">Get started now</span>
       <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
     </a>
@@ -887,7 +887,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=0" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         
         <div class="text-center pt4">
-          <a href='https://app.qzzr.com/account/signup' class="button button-large button-primary h6 b">
+          <a href='/pricing/' class="button button-large button-primary h6 b">
             <span class="button-label pt3" style="display: block;">Get started now</span>
             <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
           </a>
