Build file change missed in last commit

--- a/tour/index.html
+++ b/tour/index.html
@@ -246,7 +246,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 
 <div class="page-wrapper purple-bg pt4 pb4 text-center">
-  <a href="https://app.qzzr.com/account/signup" class="button button-square-large button-with-sub-label button-white">
+  <a href="/pricing/" class="button button-square-large button-with-sub-label button-white">
     <span class="button-label pt3" style="display: block;">Get started now</span>
     <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
   </a>
