opps get started on pricing needs to go to signup

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -200,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-      <a href="/pricing/" class="button">Get started</a>
+      <a href="http://app.qzzr.com/account/signup" class="button">Get started</a>
     </footer>
   </article>
 </section>
