button text on plans

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -200,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-      <a href="http://app.qzzr.com/account/signup" class="button">Get started</a>
+      <a href="http://app.qzzr.com/account/signup" class="button">Sign up</a>
     </footer>
   </article>
 </section>
@@ -246,7 +246,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </section>
       <footer class="box-footer">
-          <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
+          <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Sign up</a>
       </footer>
     </div>
     <div class="per-month">
@@ -289,7 +289,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </ul>
       </section>
       <footer class="box-footer">
-          <a href="http://app.qzzr.com/account/signup_pro/59" class="button">Get started</a>
+          <a href="http://app.qzzr.com/account/signup_pro/59" class="button">Sign up</a>
       </footer>
     </div>
   </article> 
