Updating plans info

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -240,9 +240,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </li>
           <li class="list-item">Export leads and data</li>
           <li class="list-item">Reduced Qzzr branding</li>
-          <li class="list-item">Customize share text</li>
-          <li class="list-item">Customized CTA's</li>
-          <li class="list-item">Unlisted quizzes</li>
+          <li class="list-item">
+            Customize tweet text
+            <span class="tooltip tooltip-long help-icon"
+              data-tooltip="Add your Twitter handle and hashtags to your quizzes.">
+              <i class="icon-ss-info icon"></i>
+            </span>
+          </li>
+          <li class="list-item">
+            Disable suggested quizzes
+            <span class="tooltip tooltip-long help-icon"
+              data-tooltip="Disable the suggested quizzes that are shown at the end of a quiz.">
+              <i class="icon-ss-info icon"></i>
+            </span>
+          </li>
+          <li class="list-item">
+            Unlisted quizzes
+            <span class="tooltip tooltip-long help-icon"
+              data-tooltip="Hide quizzes from Qzzr content network.">
+              <i class="icon-ss-info icon"></i>
+            </span>
+          </li>
         </ul>
       </section>
       <footer class="box-footer">
@@ -318,6 +336,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
   </article> 
 </section>
+
 
   </div>
 
