--- a/present-targeted-offers/index.html
+++ b/present-targeted-offers/index.html
@@ -49,6 +49,8 @@
   <style>
     .dumb-center-wrapper {
       height: 310px;
+      position: relative;
+      overflow: hidden;
     }
     .dumb-center-transform {
       position: absolute;
