--- a/tour/index.html
+++ b/tour/index.html
@@ -460,7 +460,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
   <div class="page-wrapper">
-
+  <!-- crazyEgg -->
+  <script type="text/javascript">
+    setTimeout(function(){var a=document.createElement("script");
+    var b=document.getElementsByTagName("script")[0];
+    a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+    a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+  </script>
   <nav class="text-center purple-bg pt4 pb4">
     <a href="/pricing/" class="button button-large h6 b button-outline button-white">
       <span class="button-label pt3" style="display: block;">Get started now</span>
@@ -546,9 +552,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
 
     </div>
-  </div>
-</div> 
+   </div>
+  </div> 
 </div>
+
 
  <div class="modal-backdrop js-close-modal" style="display: none"></div>
 
