--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   
   <meta charset="utf-8">
 
-  <title>Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr</title>
+  <title>Create Engaging Quizzes for Your Website | Free Quiz Maker by Qzzr</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 
-  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and easily track results.">
+  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and track results.">
 
   <meta property="og:title" content="Qzzr, the world's simplest quiz tool" />
   <meta property="og:url" content="http://qzzr.co" />
@@ -762,6 +762,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
      if(oldonload){oldonload()}};
   }());
+</script>
+<!-- crazyEgg -->
+<script type="text/javascript">
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>
 </body>
 </html>
