fixed crazy egg and addroll

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   
   <meta charset="utf-8">
 
-  <title>Create Engaging Quizzes for Your Website | Free Quiz Maker by Qzzr</title>
+  <title>Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 
-  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and track results.">
+  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and easily track results.">
 
   <meta property="og:title" content="Qzzr, the world's simplest quiz tool" />
   <meta property="og:url" content="http://qzzr.co" />
@@ -566,14 +566,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-  <div class="page-wrapper">
   <!-- crazyEgg -->
-  <script type="text/javascript">
-    setTimeout(function(){var a=document.createElement("script");
-    var b=document.getElementsByTagName("script")[0];
-    a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
-    a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-  </script>
+<script type="text/javascript">
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
+<div class="page-wrapper">
   <nav class="text-center purple-bg pt4 pb4">
     <a href="/pricing/" class="button button-large h6 b button-outline button-white">
       <span class="button-label pt3" style="display: block;">Get started now</span>
@@ -742,12 +743,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   });
 </script>
 
+
 <!-- Typekit -->
 <script type="text/javascript" src="//use.typekit.net/ncg3ahx.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<!-- AddRoll -->
+<!-- Crazy Egg -->
 <script type="text/javascript">
-  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+<!-- Add Roll -->
+<script type="text/javascript">
+  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";f
   adroll_pix_id = "PS5BPWQY5RAPPGRKEQIXZB";
   (function () {
   var oldonload = window.onload;
@@ -763,12 +772,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      if(oldonload){oldonload()}};
   }());
 </script>
-<!-- crazyEgg -->
-<script type="text/javascript">
-  setTimeout(function(){var a=document.createElement("script");
-  var b=document.getElementsByTagName("script")[0];
-  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
-  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-</script>
+
 </body>
 </html>
