--- a/tour/index.html
+++ b/tour/index.html
@@ -459,7 +459,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 
 
-  <div class="page-wrapper">
+  <!-- crazyEgg -->
+<script type="text/javascript">
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
+<div class="page-wrapper">
   <nav class="text-center purple-bg pt4 pb4">
     <a href="/pricing/" class="button button-large h6 b button-outline button-white">
       <span class="button-label pt3" style="display: block;">Get started now</span>
@@ -628,9 +636,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   });
 </script>
 
+
 <!-- Typekit -->
 <script type="text/javascript" src="//use.typekit.net/ncg3ahx.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<!-- Crazy Egg -->
+<script type="text/javascript">
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+<!-- Add Roll -->
+<script type="text/javascript">
+  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";f
+  adroll_pix_id = "PS5BPWQY5RAPPGRKEQIXZB";
+  (function () {
+  var oldonload = window.onload;
+  window.onload = function(){
+     __adroll_loaded=true;
+     var scr = document.createElement("script");
+     var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+     scr.setAttribute('async', 'true');
+     scr.type = "text/javascript";
+     scr.src = host + "/j/roundtrip.js";
+     ((document.getElementsByTagName('head') || [null])[0] ||
+      document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+     if(oldonload){oldonload()}};
+  }());
+</script>
 
 </body>
 </html>
