--- a/terms/index.html
+++ b/terms/index.html
@@ -574,7 +574,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 <!-- Add Roll -->
 <script type="text/javascript">
-  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";f
+  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";
   adroll_pix_id = "PS5BPWQY5RAPPGRKEQIXZB";
   (function () {
   var oldonload = window.onload;
