--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   
   <meta charset="utf-8">
 
-  <title>Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr</title>
+  <title>Create Engaging Quizzes for Your Website | Free Quiz Maker by Qzzr</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 
-  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and easily track results.">
+  <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and track results.">
 
   <meta property="og:title" content="Qzzr, the world's simplest quiz tool" />
   <meta property="og:url" content="http://qzzr.co" />
@@ -747,31 +747,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Typekit -->
 <script type="text/javascript" src="//use.typekit.net/ncg3ahx.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<!-- Crazy Egg -->
-<script type="text/javascript">
-  setTimeout(function(){var a=document.createElement("script");
-  var b=document.getElementsByTagName("script")[0];
-  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
-  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-</script>
-<!-- Add Roll -->
-<script type="text/javascript">
-  adroll_adv_id = "MQQDOWHGOBEJTCDJ73L72M";
-  adroll_pix_id = "PS5BPWQY5RAPPGRKEQIXZB";
-  (function () {
-  var oldonload = window.onload;
-  window.onload = function(){
-     __adroll_loaded=true;
-     var scr = document.createElement("script");
-     var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-     scr.setAttribute('async', 'true');
-     scr.type = "text/javascript";
-     scr.src = host + "/j/roundtrip.js";
-     ((document.getElementsByTagName('head') || [null])[0] ||
-      document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-     if(oldonload){oldonload()}};
-  }());
-</script>
+
 
 </body>
 </html>
