--- a/pricing/index.html
+++ b/pricing/index.html
@@ -202,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-      <a href="http://app.qzzr.com/account/signup" class="button">Sign up</a>
+      <a href="http://app.qzzr.com/account/signup" class="button">Create a quiz</a>
     </footer>
   </article>
 </section>
