will be adding Gofish to Agencies page.

--- a/agencies/index.html
+++ b/agencies/index.html
@@ -1,10 +1,12 @@
+$title Agencies | Qzzr -->
+
 <!DOCTYPE html>
 <html>
 <head>
   
   <meta charset="utf-8">
 
-  <title>Agencies | Qzzr</title>
+  <title>Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -581,189 +583,39 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
 </div>
 
+<!-- grid seven -->
 
-  <!-- crazyEgg -->
-<script type="text/javascript">
-  setTimeout(function(){var a=document.createElement("script");
-  var b=document.getElementsByTagName("script")[0];
-  a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0021/3463.js?"+Math.floor(new Date().getTime()/3600000);
-  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-</script>
+  <!-- <div class="grid" id="#bios">
 
-<div class="page-wrapper">
-  <nav class="text-center purple-bg pt4 pb4">
-    <a href="/pricing/" class="button button-large h6 b button-outline button-white">
-      <span class="button-label pt3" style="display: block;">Get started now</span>
-      <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
-    </a>
-  </nav>
+    <div class="col-6 col-wm-12 mb5">
+      <article class="media media-team-member">
+        <section class="media-block">
+          <figure class="figure figure-full figure-rounded">
+            <img src="/assets/images/agencies/image-14.png"class="figure-image" alt="Logo">
+          </figure>
+        </section>
+        <section class="media-content">
+          <h2 class="h5 pb2">
+            Go Fish Digital
+          </h2>
 
-  <div class="grid gray-dark-bg pb4">
-    <div class="col-10 col-offset-1 col-wxxxl-12 col-wxxxl-offset-0">
+          <p class="h7 hyphenate opacity-5 mb3">SHIFT Communications will work with you to create an engaging, highly shareworthy quiz for your business. We have the know-how to coordinate every step of the process, including developing fun survey ideas, drafting the survey, selecting scoring parameters, choosing images for the results, implementing the survey and either handing off the quiz’s code or running the quiz on the site for you. SHIFT can also provide content creation ideas around the results to drive further content for your company.
+          </p>
 
-      <div class="grid grid-nested">
-        <div class="col-3 col-wxxl-6 col-ws-12">
-          <ul class="list-nav-inverted">
-            <li class="list-item">
-              <a href="/" class="list-item-link">Home</a>
-            </li>
-            <li class="list-item">
-              <a href="/pricing/" class='list-item-link'>Pricing</a>
-            </li>
-            <li class="list-item">
-              <a href="/about/" class='list-item-link'>About</a>
-            </li>
-            <li class="list-item">
-              <a href="http://blog.qzzr.com" class="list-item-link">
-                Blog
-              </a>
-            </li>
-            <li class="list-item">
-              <a href="/agencies/" class="list-item-link">Need a Quiz Made?</a>
-            </li>
-        </div>
-
-        <div class="col-3 col-wxxl-6 col-ws-12">
-          <ul class="list-nav-inverted">
-            <li class="list-item-header">Use cases</li>
-            <li class="list-item">
-              <a href="/drive-social-traffic/" class='list-item-link'>Drive social traffic</a>
-            </li>
-            <li class="list-item">
-              <a href="/generate-qualified-leads/" class='list-item-link'>Generate qualified leads</a>
-            </li>
-            <li class="list-item">
-              <a href="/present-targeted-offers/" class='list-item-link'>Present targeted offers</a>
-            </li>
+          <h6 class="h8-cap opacity-7 pb2 pt3">
+            Quizzes Made
+          </h6>
+          <ul class="h8 list list-bullet pb3">
+            <li class="list-item"><a class="link link-purple" href="https://www.qzzr.co/quiz/which-credit-card-motto-are-you-c9975b2d-7073-4917-bf3d-a56436e1202c">Which Credit Card Motto are you?</a></li>
+            <li class="list-item"><a class="link link-purple" href="https://www.qzzr.co/quiz/which-christmas-song-are-you-5d168464-48c5-42af-82ed-a88437968eb2">Which Christmas Song are you?</a></li>
           </ul>
-        </div>
-
-        <div class="col-3 col-wxxl-6 col-ws-12">
-          <ul class="list-nav-inverted">
-            <li class="list-item-header">Be friendly</li>
-            <li class="list-item">
-              <a href="https://www.facebook.com/pages/QZZR/200008303516674" class="list-item-link">
-                Like us on Facebook
-              </a>
-            </li>
-            <li class="list-item">
-              <a href="https://twitter.com/Qzzr_" class="list-item-link">
-                Follow us on Twitter
-              </a>
-            </li>
-            <li class="list-item">
-              <a href="https://www.linkedin.com/company/qzzr" class="list-item-link">
-                Do something on Linkedin
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-3 col-wxxl-6 col-ws-12">
-          <ul class="list-nav-inverted">
-            <li class="list-item-header">&copy; 2014 Qzzr</li>
-            <li class="list-item">
-              <a href="/terms/" class='list-item-link'>Terms of service</a>
-            </li>
-            <li class="list-item">
-              <a href="/privacy/" class='list-item-link'>Privacy policy</a>
-            </li>
-            <li class="list-item">
-              <a href="/content/" class='list-item-link'>Content Guidelines</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-   </div>
-  </div> 
-</div>
-
-
- <div class="modal-backdrop js-close-modal" style="display: none"></div>
-
-<div id="videoModal" class='modal modal-video' style="display: none">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <iframe src="//player.vimeo.com/video/102863517?title=0&amp;byline=0&amp;portrait=0&amp;color=9559ce&amp;autoplay=0" width="500" height="290" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        
-        <div class="text-center pt4">
-          <a href='/pricing/' class="button button-large button-primary h6 b">
-            <span class="button-label pt3" style="display: block;">Get started now</span>
-            <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
-          </a>
-        </div> 
-      </div>
-    </div>
+          <p class="h7">
+            <a href="mailto:brian.patterson@gofishdigital.com" class="button button-outline button-primary mr2">Email</a>
+            
+            <a target="_blank" href="http://gofishdigital.com/" class="button button-outline button-outline-gray">View site</a>
+          </p>
+        </section>
+      </article>
+    </div> -->
   </div>
-
-  <a class="modal-close js-close-modal"><i class="icon-ss-delete"></i></a>
-</div>
-
-  <script src='../assets/javascripts/jquery.fancybox.js'></script>
-  <script src='../assets/javascripts/jquery.fitvids.js'></script>
-
-
-  <!-- Google Analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-45882503-8', 'auto');
-    ga('send', 'pageview');
-  </script>
-
-<!-- Browser Update -->
-<script type="text/javascript"> 
-  var $buoop = {vs:{i:9,f:15,o:15,s:5.1,n:9}}; 
-  $buoop.ol = window.onload; 
-  window.onload=function(){ 
-    try {if ($buoop.ol) $buoop.ol();}catch (e) {} 
-    var e = document.createElement("script"); 
-    e.setAttribute("type", "text/javascript"); 
-    e.setAttribute("src", "//browser-update.org/update.js"); 
-    document.body.appendChild(e); 
-  }
-</script>
-<script>
-  $(document).ready(function(){
-    var $body = $('body'),
-      $adModal = $('#videoModal, .modal-backdrop');
-
-    $('.js-dropdown-trigger').click(function(){
-      event.stopPropagation();
-      $(this).parent('.dropdown').toggleClass('is-active');
-    })
-
-    $(document).click( function(){
-      $('.dropdown').removeClass('is-active');
-    });
-
-    $('.js-modal-trigger').click(function(){
-      $body.append($adModal);
-      $adModal.show();
-      return false;
-    });
-
-    $('.js-close-modal').click(function(){
-      $adModal.hide();
-      $adModal.detach();
-      return false;
-    });
-
-    $('#videoModal').fitVids();
-  });
-</script>
-
-
-<!-- Typekit -->
-<script type="text/javascript" src="//use.typekit.net/ncg3ahx.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-
-</body>
-</html>
+<!-- @include _foot
