adjusted pricing page and added GoFishDigital to agencies

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -367,16 +367,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <strong class="b">We guarantee that you will absolutely love Qzzr and our support.</strong><br>
         <span class="opacity-5">If you don’t for any reason, just let us know and we will either make it right or provide a full refund for your service.</span>
       </p>
-      <hr class="rule mb6 mt6">
     </div>
   </div>
 
   <div class="text-center pb7">
-    <p class="h3 mb4">Want a quiz made for you?</p>
-    <a href="../agencies/index.html" class='marketing.agencies button button-outline button-primary'>
-      Talk with one of these agencies
+    <br>
+    <p class="h3 mb4">Still not sure? We would love to talk to you.</p>
+    <a href="mailto:sales@qzzr.com" target="_blank" class="button button-outline button-primary">
+      Get in touch
     </a>
-    <hr class="rule mt6">
   </div>
 
   <div class="grid text-center">
@@ -428,11 +427,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
 
   <div class="text-center pb7">
-    <hr class="rule mt6 mb6">
-    <p class="h3 mb4">Still not sure? We would love to talk to you.</p>
-    <a href="mailto:hello@qzzr.co" target="_blank" class="button button-outline button-primary">
-      Get in touch
+    <p class="h3 mb4">Want a quiz made for you?</p>
+    <a href="../agencies/index.html" class='marketing.agencies button button-outline button-primary'>
+      Talk with one of these agencies
     </a>
+    <hr class="rule mt6">
   </div>
 </div>
 
