--- a/pricing/index.html
+++ b/pricing/index.html
@@ -428,7 +428,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="text-center pb7">
     <p class="h3 mb4">Want a quiz made for you?</p>
-    <a href="../agencies" class='marketing.agencies button button-outline button-primary'>
+    <a href="../agencies/" class='marketing.agencies button button-outline button-primary'>
       Talk with one of these agencies
     </a>
     <hr class="rule mt6">
