added zopim for Marketing

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -84,7 +84,16 @@
     }
   </style>
 
-
+  <!--Start of Zopim Live Chat Script-->
+  <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+    $.src='//v2.zopim.com/?2ZyyWEdY2QoxevcLatYqb6bMzmXSELiZ';z.t=+new Date;$.
+    type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+  </script>
+  <!--End of Zopim Live Chat Script-->
+  
 </head>
 <body>
   <!--[if lt IE 10]>You are using an outdated version of Internet Explorer.  Qzzr is not compatible with any IE version under 10. Please go to Windows Updates and install the latest version.<![endif]-->
@@ -354,7 +363,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-      <a href="mailto:sales@qzzr.com?subject=Qzzr Enterprise..." class="button">Request info</a>
+      <a href="http://go.qzzr.com/enterprise-request" class="button">Request info</a>
     </footer>
   </article> 
 </section>
@@ -525,6 +534,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </li>
             <li class="list-item">
               <a href="/content/" class='list-item-link'>Content Guidelines</a>
+            </li>
+            <li class="list-item">
+              <a href="mailto:sales@qzzr.com" class='list-item-link'>Contact us</a>
             </li>
           </ul>
         </div>
