--- a/pricing/index.html
+++ b/pricing/index.html
@@ -380,7 +380,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
 
   <div class="text-center pb7">
-    <br>
+    <hr class="rule mt6">
     <p class="h3 mb4">Still not sure? We would love to talk to you.</p>
     <a href="mailto:sales@qzzr.com" target="_blank" class="button button-outline button-primary">
       Get in touch
