--- a/index.html
+++ b/index.html
@@ -243,18 +243,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <a class="figure-image" href="/user/nicoled84/fi9wcm9maWxlcy8xMDI2NA" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-10264.png);">
+                <a class="figure-image" href="/user/yahoo-celebrity/fi9wcm9maWxlcy8xMDI1MQ" style="background-image: url(http://static.wixstatic.com/media/9b8c43_be769b29e5d147bf9f3cfd77c21acfc1.png);">
                 </a>
               </span>
-              <a name="user"href="/user/nicoled84/fi9wcm9maWxlcy8xMDI2NA" class="ellipsis quiz-thumbnail-author">
+              <a name="user"href="/user/yahoo-celebrity/fi9wcm9maWxlcy8xMDI1MQ" class="ellipsis quiz-thumbnail-author">
                  Yahoo!
               </a>
             </span>
-            <a class="event-card-title hyphenate" href="/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1">
+            <a class="event-card-title hyphenate" href="which-taylor-swift-are-you/fi9xdWl6emVzLzI0NDcw">
               Which Taylor Swift are you?
             </a>
           </span>
-          <a class="event-card-thumbnail" href="/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/47/06fb7062da11e48b5fe92ceb7e8323/Screen-Shot-2014-11-02-at-4.50.18-PM.png);">
+          <a class="event-card-thumbnail" href="quiz/which-taylor-swift-are-you/fi9xdWl6emVzLzI0NDcw" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/3e/ee64b05b8b11e4a732d71f002e44aa/Taylor-Swift-1989-Deluxe-2014-1200x1200.png);">
           </a>
         </span>
         <!-- fifth College Humor/Sci-fi author -->
