--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="/assets/images/logos/collegehumor.jpg" class="figure-image">
         </figure>
         <p>
-          <span class="h8-cap purple-color" style="font-size: 16px;">College Humor</span> uses Qzzr to crack up their fans through discovering the difference between an ancient Chinese proverb and a Jayden Smith tweet.
+          <span class="h8-cap purple-color" style="font-size: 16px;">College Humor</span> uses Qzzr to crack up their fans through discovering the difference between an ancient Chinese proverb and a Jaden Smith tweet.
         </p>
       </section>
       <section class="mb5">
