change to agencies for stryde

--- a/agencies/index.html
+++ b/agencies/index.html
@@ -284,7 +284,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Quizzes Made
           </h6>
           <ul class="h8 list list-bullet pb3">
-            <li class="list-item"><a class="link link-purple" href="http://www.bonafidetraveler.com/uk-castle-live-quiz-2/">Which UK castle should you live in?</a></li>
+            <li class="list-item"><a class="link link-purple" href="http://blog.canyonsports.com/utah-ski-resort-quiz/">Which Utah Ski Resort Are You?</a></li>
             <li class="list-item"><a class="link link-purple" href="http://www.bonafidetraveler.com/disneyland-resort-attractions-quiz/">What Disneyland Resort Attraction Is This?</a></li>
             <li class="list-item"><a class="link link-purple" href="http://www.viive.com/Blog/TabId/88/PostId/11/mac-vs-pc-find-out-the-true-personality-of-your-practice.aspx">Mac vs. PC: What should the personality of your dental practice be?</a></li>
           </ul>
