Added new Marketing video to home page

--- a/about/index.html
+++ b/about/index.html
@@ -574,6 +574,59 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
   </div>
 
+<!--   <div class="grid">
+
+    <div class="col-6 col-wxl-12 mb5">
+      <article class="media media-team-member">
+        <section class="media-block">
+          <figure class="figure figure-full figure-rounded">
+            <img src="/assets/images/avatars/ryan.jpg"class="figure-image">
+          </figure>
+        </section>
+        <section class="media-content">
+          <h2 class="h5 pb2">
+            Trent Mcfadyen
+          </h2>
+          <h6 class="h8-cap opacity-7 pb2">
+            Tour Manager
+          </h6>
+          <p class="h7 hyphenate opacity-5">Trent is a bit like our very own Mussolini. He makes the trains run on time. On the other hand, he’s not a fascist nor friends with Hitler. So that’s a big plus. His background includes sales, research at Brigham Young University, and work as an analyst at Peak Ventures. At Qzzr, he handles all the logistics and keeps Qzzr in the bright lights on stage. </p>
+          <p class="h7">
+            <a target="_blank" href="https://twitter.com/trentonmcfadyen" class="link link-twitter">Twitter</a>
+            <span class="opacity-5">&nbsp;&nbsp;&middot;&nbsp;&nbsp;</span>
+            <a target="_blank" href="http://www.linkedin.com/pub/ryan-hamblin/a3/a7/a88/" class="link link-linkedin">Linkedin</a>
+          </p>
+        </section>
+      </article>
+    </div> -->
+
+    <!-- <div class="col-6 col-wxl-12 mb5">
+      <article class="media media-team-member">
+        <section class="media-block">
+          <figure class="figure figure-full figure-rounded">
+            <img src="/assets/images/avatars/connor.jpg"class="figure-image">
+          </figure>
+        </section>
+        <section class="media-content">
+          <h2 class="h5 pb2">
+             Connor Child
+          </h2>
+          <h6 class="h8-cap opacity-7 pb2">
+            Sir Quiz A Lot
+          </h6>
+          <p class="h7 hyphenate opacity-5"> 
+            Connor's background includes journalism, economics and content marketing. What did each role have in common? Writing, and lots of it. Connor ensures that all of Qzzr's content is on point. And nothing makes him happier than a remarkable quiz. Except perhaps sharing his recipe for secret-saucemness with Qwizards across the world.</p>
+          <p class="h7">
+            <a target="_blank" href="https://twitter.com/connorchild" class="link link-twitter">Twitter</a>
+            <span class="opacity-5">&nbsp;&nbsp;&middot;&nbsp;&nbsp;</span>
+            <a target="_blank" href="https://www.linkedin.com/in/connorchild" class="link link-linkedin">Linkedin</a>
+          </p>
+        </section>
+      </article>
+    </div> -->
+<!--     
+  </div> -->
+
 </div>
 
 <div class="page-wrapper">
