--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
   
   <meta charset="utf-8">
 
-  <title>Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr</title>
+  <title>About | Qzzr</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
