--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <span class="wm-block">Present offers</span>
     </h4>
     <div class="text-center pt4 pb5">
-      <a href="/pricing/" class="button button-large button-primary h6 b mr2 ml2 mb2">
+      <a href="/pricing" class="button button-large button-primary h6 b mr2 ml2 mb2">
         Get started now
       </a>
       <a href="#videoModal" style="width: 280px" class="button button-large h6 b button-outline button-white js-modal-trigger mr2 ml2 mb2">
