--- a/about/index.html
+++ b/about/index.html
@@ -572,16 +572,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
   </div>
 
-<!--   <div class="grid">
+  <div class="grid">
 
     <div class="col-6 col-wxl-12 mb5">
       <article class="media media-team-member">
         <section class="media-block">
           <figure class="figure figure-full figure-rounded">
-            <img src="/assets/images/avatars/ryan.jpg"class="figure-image">
+            <img src="/assets/images/avatars/trent.jpg"class="figure-image">
           </figure>
         </section>
-        <section class="media-content">
+        <section class="media-content"> 
           <h2 class="h5 pb2">
             Trent Mcfadyen
           </h2>
@@ -596,7 +596,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </section>
       </article>
-    </div> -->
+    </div>
 
     <!-- <div class="col-6 col-wxl-12 mb5">
       <article class="media media-team-member">
