--- a/tour/index.html
+++ b/tour/index.html
@@ -80,7 +80,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <script type="text/javascript">
 	dataLayer.push({"pagePostType":"page","pagePostType2":"single-page","pagePostAuthor":"admin"});
 </script></head>
-<body class="page page-id-4 page-parent page-template page-template-tour page-template-tour-php header-image full-width-content"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../blog/page/13/Han_shot_first">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4 current_page_item menu-item-11"><a href="index.html">Tour</a></li>
+<body class="page page-id-4 page-parent page-template page-template-tour page-template-tour-php header-image full-width-content"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4 current_page_item menu-item-11"><a href="index.html">Tour</a></li>
 <li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="index.html#toggleShowUses">Uses</a>
 <ul class="sub-menu">
 	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="index.html#">Qzzr for:</a></li>
