--- a/uses/present-targeted-offers/index.html
+++ b/uses/present-targeted-offers/index.html
@@ -83,7 +83,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <script type="text/javascript">
 	dataLayer.push({"pagePostType":"frontpage","pagePostType2":"single-page","pagePostAuthor":"admin"});
 </script></head>
-<body class="home page page-id-99 page-parent page-template page-template-home page-template-home-php header-image content-sidebar"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../../blog/page/13/Han_shot_first">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../../tour">Tour</a></li>
+<body class="home page page-id-99 page-parent page-template page-template-home page-template-home-php header-image content-sidebar"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../../tour">Tour</a></li>
 <li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="../#toggleShowUses">Uses</a>
 <ul class="sub-menu">
 	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="../#">Qzzr for:</a></li>
@@ -791,7 +791,7 @@ of quiz tips and strategies.</div>
 
         </div></div>
 	</div>
-    <div id="inner"><div class="wrap"><div id="content-sidebar-wrap"><div id="content" class="hfeed"></div><div id="sidebar" class="sidebar widget-area col-4"><div class="widget-area"><div id="search-3" class="widget widget_search"><div class="widget-wrap"><form method="get" class="searchform search-form" action="../../blog/page/13/Han_shot_first" role="search" ><input type="text" value="search" name="s" class="s search-input" onfocus="if (&#039;search&#039; === this.value) {this.value = &#039;&#039;;}" onblur="if (&#039;&#039; === this.value) {this.value = &#039;search&#039;;}" /><input type="submit" class="searchsubmit search-submit" value="Go" /></form></div></div>
+    <div id="inner"><div class="wrap"><div id="content-sidebar-wrap"><div id="content" class="hfeed"></div><div id="sidebar" class="sidebar widget-area col-4"><div class="widget-area"><div id="search-3" class="widget widget_search"><div class="widget-wrap"><form method="get" class="searchform search-form" action="../../" role="search" ><input type="text" value="search" name="s" class="s search-input" onfocus="if (&#039;search&#039; === this.value) {this.value = &#039;&#039;;}" onblur="if (&#039;&#039; === this.value) {this.value = &#039;search&#039;;}" /><input type="submit" class="searchsubmit search-submit" value="Go" /></form></div></div>
 <div id="mc4wp_widget-2" class="widget widget_mc4wp_widget"><div class="widget-wrap"><!-- Form by MailChimp for WordPress plugin v2.2.7 - https://mc4wp.com/ --><div id="mc4wp-form-1" class="form mc4wp-form"><form method="post"><div class="box box-green">
 <h2 class="b">Get the latest on interactive content in your inbox</h2>
 <p class="field field-light">
